# matter-observability

./: .gitignore  README.md  load_env_var.sh  pyproject.toml
.github/workflows/: release.yaml
matter_observability/: config.py
matter_observability/fastapi/: __init__.py  utils.py
matter_observability/logging/: __init__.py  logging_config.py
matter_observability/metrics/: __init__.py  custom_metrics.py  decorators.py  labeled_counter.py  labeled_gauge.py  labeled_gauge_duration.py  labeled_metric.py  utils.py
tests/: conftest.py  test.env  test_core.py  test_decorators.py
tests/fastapi/: test_configure_middleware.py  test_request_id.py
tests/metrics/: test_core.py  test_decorators.py  test_utils.py
