[project]
name = "matter-observability"
description = "A template for Matter's observability library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Tomer Sasson", email = "tomer@thisismatter.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "starlette_exporter==0.15.1",
    "matter-exceptions==1.1.*"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Matter-Tech/matter-observability#readme"
Issues = "https://github.com/Matter-Tech/matter-observability/issues"
Source = "https://github.com/Matter-Tech/matter-observability"

[tool.hatch.version]
path = "matter_observability/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "matter-observability",
    "fastapi",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "black",
    "mypy",
    "ruff",
    "python-dotenv",
]

[tool.hatch.envs.default.scripts]
test = "pytest -W error --cov-report=term-missing -c=pyproject.toml --cov=matter_observability {args}"
no-cov = "test --no-cov {args}"
typing = "mypy --install-types --non-interactive {args:matter_exceptions tests}"
style =     [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
lint = [
  "style",
]

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.ruff]
target-version = "py310"
line-length = 120
ignore = ["F401", "E501"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "matter_observability/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under=95

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
